<resources>
    <string name="app_name">WishHair</string>
    <string name="App_title_name">We Share Wish Hair</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--    login -->
    <string name="login_title_1">Welcome to</string>
    <string name="login_title_2">WSWH</string>
    <string name="login_hint_id">ID</string>
    <string name="login_hint_pw">PW</string>
    <string name="sign_button_login">LOG IN</string>
    <string name="sign_button_register"><![CDATA[회원가입 >]]></string>
    <string name="sign_button_findPassword"><![CDATA[비밀번호 찾기 >]]></string>
    <!--    cert -->
    <string name="cert_message_1">이메일 인증</string>
    <string name="cert_message_2">• 이메일 주소</string>
    <string name="cert_hint_email">InqInq@email.com</string>
    <string name="cert_message_btn_send">메일 발송</string>
    <string name="cert_message_3">• 인증번호</string>
    <string name="cert_timer">남은 시간</string>
    <string name="cert_hint_submit">인증번호를 입력해주세요</string>
    <string name="cert_message_btn_submit">인증확인</string>
    <!--    terms -->
    <string name="sign_term_message1">필수 약관에 동의해주세요 :)</string>
    <string name="sign_term_message2">약관</string>
    <string name="register_term_1">WSWH 회원약관 (필수)</string>
    <string name="register_term_2">개인정보의 필수적인 사항에 대한 수집 이용 동의 (필수)</string>
    <string name="register_term_3">개인정보의 필수적인 제3자 제공에 대한 동의 (필수)</string>
    <!--    register -->
    <string name="sign_title">회원가입</string>
    <string name="register_message_1">회원정보</string>
    <string name="register_message_2">• 이름</string>
    <string name="register_condition_name">한글 또는 영문으로 입력해주세요</string>
    <string name="register_message_3">• 닉네임</string>
    <string name="register_condition_nickname">2~8자리의 공백을 제외한 영문/한글/숫자를 입력해주세요</string>
    <string name="register_message_4">• 비밀번호</string>
    <string name="register_condition_password">8~20자리의 영문/한글/특수문자를 함께 입력해주세요</string>
    <string name="register_message_5">• 성별</string>
    <string name="register_message_sex">성별 :</string>
    <string name="register_text_sex_man">남성</string>
    <string name="register_text_sex_woman">여성</string>
    <string name="register_message_6">회원가입완료</string>

    <!--    review -->
    <string name="review_filter_whole">전체</string>
    <string name="review_filter_man">남성</string>
    <string name="review_filter_woman">여성</string>
    <string name="review_item_btn_view"><![CDATA[전체보기 >]]></string>
    <string name="review_recent_btn_write">리뷰 작성하기</string>
    <!--    review detail -->
    <string name="review_detail_menu_modify">리뷰 수정</string>
    <string name="review_detail_menu_delete">리뷰 삭제</string>
    <string name="review_detail_nicknameText">님</string>
    <string name="write_detail_btn_goHair">헤어스타일 바로보기</string>
    <!--    write review -->
    <string name="write_review_message_1">시술은 만족스러우셨나요?</string>
    <string name="write_review_massage_2">시술에 대한 별점을 매겨주세요</string>
    <string name="write_review_massage_3">최소 5자, 최대 200자 사이로 작성해주세요</string>
    <string name="write_review_submit">등록하기</string>

    <!--    home -->
    <string name="home_icon_notification">home_icon_notification</string>
    <string name="home_message_1">안녕하세요,</string>
    <string name="home_message_2">님!</string>
    <string name="home_message_3">얼굴형 분석에 참여해보세요.</string>
    <string name="home_message_4">AI 얼굴형 분석하러</string>
    <string name="home_message_5">GO!</string>
    <string name="home_message_6">이달의 추천 리뷰</string>
    <string name="home_message_7">님 만을 위한 추천</string>

    <string name="find_password_message1">비밀번호 찾기</string>
    <string name="find_password_message2">아이디 확인 후 비밀번호를 \n 확인할 수 있습니다.</string>

    <string name="xmlDisplay_username">userName</string>
    <string name="message_confirm">확인</string>
    <string name="message_cancel">취소</string>
    <string name="write_review_message_4">• 헤어스타일명</string>
    <string name="write_review_message_5">• 사진</string>
    <string name="write_review_message_6">• 내용</string>
    <string name="func_message_1">사진 4장을 업로드해주세요 :)</string>
    <string name="func_message_2">정면을 보고 있는 사진을 업로드해주세요</string>
    <string name="func_message_btn_submit">얼굴형 분석하기</string>


</resources>
