<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign.EmailCertActivity"
    android:orientation="vertical">

<!--    topBar -->
<!--    setText " " -->
    <include layout="@layout/top_bar_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/cert_message_1"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

<!--    input email -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/cert_message_2"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:weightSum="5">
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="3dp"
                android:src="@drawable/sign_email"
                android:background="@drawable/border_sign_image"
                android:contentDescription="@string/login_hint_id" />

            <EditText
                android:id="@+id/sign_cert_et_email"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:paddingStart="5dp"
                android:layout_weight="4"
                android:background="@drawable/border_sign_text"
                android:ems="10"
                android:hint="@string/register_hint_id"
                android:inputType="textEmailAddress"
                android:importantForAutofill="no"
                tools:ignore="RtlSymmetry" />
        </LinearLayout>
        <Button
            android:id="@+id/sign_cert_btn_requestSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/cert_message_btn_send"/>

<!--        input code -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal">
            <TextView
                android:id="@+id/sign_cert_timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/cert_timer"
                android:textColor="@color/timer_red"/>

<!--            TODO : 회원정보 수정에 있는 닉네임 테두리 가져다 쓰기 -->
            <EditText
                android:id="@+id/sign_cert_et_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="6"
                android:inputType="number"
                android:hint="@string/cert_hint_submit"/>

            <Button
                android:id="@+id/sign_cert_btn_confirmCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/cert_message_btn_submit"/>

            <!--        확인 -->
            <Button
                android:id="@+id/sign_cert_btn_intent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:text="@string/cert_message_btn_intent"/>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>
