<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".review.write.WriteReviewActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--    topBar -->
            <include layout="@layout/top_bar_title" />
            <!--    style info -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:padding="20dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:text="@string/write_review_message_4"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>

                <Spinner
                    android:id="@+id/write_review_spinner_hairStyle"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_marginTop="5dp"
                    android:spinnerMode="dialog"
                    android:background="@drawable/border_spinner_write"/>

            </LinearLayout>
            <!--    <hr> -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />
            <!--    grade -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/write_review_message_1"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/write_review_massage_2"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>
<!--                 TODO   https://kong-droid.com/67 -->
                <RatingBar
                    android:id="@+id/write_review_ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:stepSize="0.5"
                    android:theme="@style/RatingBar"
                    style="@style/Widget.AppCompat.RatingBar.Indicator"
                    android:contentDescription="@string/app_name"/>
            </LinearLayout>
            <!--    <hr> -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />
            <!--    image -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="20dp"
                android:text="@string/write_review_message_5"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_margin="20dp">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/write_review_addPicture"
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/write_review_plus"
                    android:contentDescription="@string/App_title_name"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/write_review_picture_recyclerView"
                    android:layout_weight="2"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/review_item_write_picture"/>
            </LinearLayout>

            <!--    content -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/write_review_message_6"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/write_review_content"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_margin="20dp"
                android:background="@drawable/border_write_review_content"
                android:inputType="textMultiLine"
                android:hint="@string/write_review_massage_3" />


        </LinearLayout>
    </ScrollView>
    <!--    submit -->
    <Button
        android:id="@+id/write_review_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="bottom"
        android:background="@drawable/border_sign_button"
        android:text="@string/write_review_submit" />

</FrameLayout>
