<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".sign.FindPasswordActivity">

    <TextView
        android:id="@+id/find_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:text="@string/find_password_message1"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/default_blue"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/find_password_message1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="27dp"
        android:text="@string/find_password_message2"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/find_password_title"
        app:layout_constraintStart_toStartOf="parent" />

<!--    hr -->
    <LinearLayout
        android:id="@+id/hr"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="25dp"
        android:background="@color/default_blue"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/find_password_message1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

<!--    input id -->
    <TextView
        android:id="@+id/find_password_message2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="20dp"
        tools:text="• 아이디"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/hr"
        app:layout_constraintStart_toStartOf="parent"/>

    <LinearLayout
        android:id="@+id/find_password_input"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:weightSum="7"
        app:layout_constraintTop_toBottomOf="@id/find_password_message2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/find_password_et_email"
            android:layout_weight="5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:background="@drawable/border_sign_text"
            android:ems="30"
            android:hint="@string/cert_hint_email"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            tools:ignore="TextFields" />
        <Button
            android:id="@+id/find_password_btn_request"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_gravity="center_vertical"
            android:text="@string/message_confirm"
            android:textColor="@color/text_ivory"
            android:textStyle="bold"
            android:background="@drawable/border_sign_button"
            android:elevation="20dp"/>
    </LinearLayout>

<!--    cancel -->
    <Button
        android:id="@+id/find_password_btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/message_cancel"
        android:textColor="@color/text_ivory"
        android:textStyle="bold"
        android:background="@drawable/border_sign_button"
        app:layout_constraintTop_toBottomOf="@id/find_password_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
